--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.5",
     "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-prettier": "^5.2.6",
     "eslint-formatter-table": "^7.32.1",
+    "eslint-plugin-prettier": "^5.2.6",
     "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
